--- a/projects/nodejs-cli/package.json
+++ b/projects/nodejs-cli/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/2.js",
     "lint": "eslint ./src/*/*.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-xo": "^0.39.0",
-    "eslint-plugin-prettier": "^4.0.0"
+    "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.4.0"
   }
 }
