--- a/projects/nodejs-cli/package.json
+++ b/projects/nodejs-cli/package.json
@@ -20,5 +20,15 @@
     "eslint-config-xo": "^0.39.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.0"
+  },
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "branches": 80,
+        "functions": 80,
+        "lines": 80,
+        "statements": -10
+      }
+    }
   }
 }
