--- a/projects/api-products/package.json
+++ b/projects/api-products/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.0",
     "nodemon": "^2.0.15"
   }
