--- a/projects/api-products/package.json
+++ b/projects/api-products/package.json
@@ -11,12 +11,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sendgrid/mail": "^7.6.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
+    "maria-service-send-mail": "^1.0.3",
     "mongoose": "^6.2.0",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15"
   }
 }
