--- a/projects/api-products/package.json
+++ b/projects/api-products/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "maria-service-send-mail": "^1.0.3",
     "mongoose": "^6.2.0",
+    "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15"
   }
