--- a/projects/api-products/package.json
+++ b/projects/api-products/package.json
@@ -4,8 +4,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "test": "set NODE_ENV=test&& jest",
+    "test:watch": "jest --watch",
+    "start": "nodemon server.js",
+    "dev": "set NODE_ENV=dev&& nodemon server.js",
+    "server-test": "set NODE_ENV=test&& nodemon server.js",
+    "test:coverage": "set NODE_ENV=test&& jest --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -18,9 +22,14 @@
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
     "maria-service-send-mail": "^1.0.3",
+    "mongodb-memory-server": "^8.4.1",
     "mongoose": "^6.2.0",
     "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.17.7",
+    "jest": "^27.5.1"
   }
 }
