--- a/projects/react-native-app1/package.json
+++ b/projects/react-native-app1/package.json
@@ -14,13 +14,16 @@
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.5.2",
     "expo": "~44.0.0",
+    "expo-device": "^4.1.1",
     "expo-image-picker": "^12.0.2",
+    "expo-notifications": "^0.14.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
